# miazcore

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  rust-toolchain.toml
.scratch/learning-client/: map.md
.scratch/learning-client/issues/: 01-trace-world-entry-protocol.md  02-define-reference-realm-environment.md  03-choose-engine-direction.md  15-reach-movement-ready.md  (+15 more)
.scratch/learning-client/prototypes/bevy-shell-platform/: Cargo.toml  README.md  rust-toolchain.toml
.scratch/learning-client/prototypes/bevy-shell-platform/src/: adapter.rs  lib.rs  main.rs  model.rs
.scratch/learning-client/prototypes/bevy-shell-platform/tests/: headless_adapter.rs
crates/client_bevy/: Cargo.toml
crates/client_bevy/src/: bridge.rs  camera.rs  diagnostics.rs  input.rs  lib.rs  proof.rs  world.rs
crates/client_bevy/tests/: headless_adapter.rs
crates/client_protocol/: Cargo.toml
crates/client_protocol/src/: error.rs  header_crypto.rs  lib.rs  login.rs  srp.rs  world.rs  world_entry.rs
crates/client_protocol/tests/: golden_login.rs  golden_world.rs  golden_world_entry.rs
crates/client_protocol/tests/fixtures/v1/: README.md  character-enum-body.hex  character-enum-body.manifest  header-client-ciphertext.hex  header-client-ciphertext.manifest  header-server-ciphertext.hex  header-server-ciphertext.manifest  login-challenge-request.hex  login-challenge-request.manifest  login-challenge-response.hex  login-challenge-response.manifest  login-proof-request.hex  login-proof-request.manifest  login-proof-response.hex  login-proof-response.manifest  realm-request.manifest  realm-response.hex  realm-response.manifest  world-auth-challenge-frame.hex  world-auth-challenge-frame.manifest  world-auth-session-frame.hex  world-auth-session-frame.manifest  world-client-encrypted-stream.hex  world-client-encrypted-stream.manifest  world-entry-force-run-ack-body.hex  world-entry-force-run-ack-body.manifest  world-entry-force-run-body.hex  world-entry-force-run-body.manifest  world-entry-live-self-projection-body.hex  world-entry-live-self-projection-body.manifest  world-entry-login-verify-body.hex  world-entry-login-verify-body.manifest  world-entry-player-login-body.hex  world-entry-player-login-body.manifest  world-entry-self-update-body.hex  world-entry-self-update-body.manifest  world-entry-self-update-compressed-body.hex  world-entry-self-update-compressed-body.manifest  world-entry-time-sync-request-body.hex  world-entry-time-sync-request-body.manifest  (+8 more)
crates/client_session/: Cargo.toml
crates/learning_client/: Cargo.toml
docs/: world-entry-manual-attestation.template.json
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
infra/azerothcore/: .env.example  .gitignore  README.md  compose.yaml  realm
scripts/: check.sh  check_dependency_boundaries.py  live-character-selection.sh  live-diagnostic-world.sh  live-movement-ready.sh  live-movement-smoke.sh  live-realm-discovery.sh  macos-compositor-proof.sh  macos-window-id.swift  persisted-movement-negative-probes.sh  persisted-movement-smoke.sh  render-smoke.sh  test-acceptance-evidence.sh  validate-acceptance-evidence.py  world-entry-acceptance.sh
(+47 files in other folders)
