[workspace]
members = [
    "crates/client_protocol",
    "crates/client_session",
    "crates/client_bevy",
    "crates/learning_client",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
bevy = { version = "=0.19.0", default-features = false, features = ["3d", "ui"] }
client_bevy = { path = "crates/client_bevy", version = "=0.1.0" }
client_protocol = { path = "crates/client_protocol", version = "=0.1.0" }
client_session = { path = "crates/client_session", version = "=0.1.0" }
crypto-bigint = { version = "=0.6.1", default-features = false, features = ["zeroize"] }
flate2 = { version = "=1.1.9", default-features = false, features = ["rust_backend"] }
getrandom = "=0.3.4"
hmac = "=0.12.1"
sha1 = "=0.10.6"
sha2 = "=0.10.9"
subtle = "=2.6.1"
zeroize = { version = "=1.8.2", default-features = false, features = ["alloc"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
