[package]
name = "client_protocol"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
crypto-bigint.workspace = true
hmac.workspace = true
sha1.workspace = true
subtle.workspace = true
zeroize.workspace = true

[dev-dependencies]
sha2.workspace = true

[lints]
workspace = true
